Bug 157679 - PPTX: Default custom text is shown in slideshow or when exporting to PDF
Summary: PPTX: Default custom text is shown in slideshow or when exporting to PDF
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
: 156827 (view as bug list)
Depends on:
Blocks: Slide-Show
  Show dependency treegraph
 
Reported: 2023-10-10 09:24 UTC by Xisco Faulí
Modified: 2024-10-01 18:04 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (15.73 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-10-10 09:24 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-10-10 09:24:41 UTC
Created attachment 190106 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Go to slideshow mode

-> "Insert page title" and "Subtitle" are displayed. They shouldn't

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0c4913e03e8427a576138601958f2dbf13b8c37b
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-10-10 09:25:40 UTC
Regression introduced by:

author	Szymon Kłos <szymon.klos@collabora.com>	2023-07-27 08:43:59 +0200
committer	Szymon Kłos <szymon.klos@collabora.com>	2023-08-04 10:17:25 +0200
commit ae3b97a69688553e6c40ef4b64655db09d5a0f5e (patch)
tree 552d0feaae071ca8f9989af85ac2e87ea6a77208
parent d501959c1b93f90321a0f1155262997e8c849753 (diff)
pptx: import shape text from master page

Bisected with: bibisect-linux64-24.2

Adding Cc: to Szymon Kłos
Comment 2 Xisco Faulí 2023-10-10 09:36:33 UTC
Same issue reproduced with attachment 164378 [details] from bug 135843
Comment 3 Commit Notification 2023-10-30 12:59:56 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4e2c70024c2370b2fc3514ee52ec433be998ec57

tdf#157679: Revert "pptx: import shape text from master page"

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2023-10-30 13:00:25 UTC
*** Bug 156827 has been marked as a duplicate of this bug. ***
Comment 5 Gerald Pfeifer 2023-10-31 14:16:23 UTC
Verified with

  Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 63a44ac83f0dbc792f71881e862c57e8037c84ae
  CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

and I also verified my original case from bug #156827.


@Xisco, do we have test coverage to avoid this regressing again?

(Maybe I am misreading the patch when not seeing it?)
Comment 6 Commit Notification 2023-10-31 16:24:43 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d0f521132c43fea1ca18e18d3e31c6d868e4ebd6

tdf#157679: vcl_pdfexport: Add unittest

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-11-01 23:53:10 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/5879d4d242fb9b4227de068aa1adc3621e190754

tdf#157679: Revert "pptx: import shape text from master page"

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-11-02 08:30:08 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/0f3d1f346b5c4dfb4073e772df1ccd91e538cf3f

tdf#157679: vcl_pdfexport: Add unittest

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.