tdf#157679: Revert "pptx: import shape text from master page"

This reverts commit ae3b97a69688553e6c40ef4b64655db09d5a0f5e.

Change-Id: I39fd84b5efbff0a2cafe090f4f866c801cef19b4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158357
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 3b37c5fa7dce7718b566ad4f4fe80191b64cd533)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158544